--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baikal</title>
+    <title>Document</title>
 </head>
 <body>
-    <head>
-        <h1>give me my money</h1>
-    </head>
+    <header>
+        <h1>give me my monye</h1>
+    </header>
 </body>
 </html>
