--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Байкальский отдых</title>
 </head>
 <body>
     <header>
-        <h1>give me my monye</h1>
+        <a href="">
+            <img src="/images/Group 281.jpg" alt="">
+        </a>
     </header>
 </body>
 </html>
