--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="">
-            <img src="/images/Group 281.jpg" alt="">
+        <a href="./index.html">
+            <img src="images/Group 28.svg" alt="logo">
         </a>
     </header>
 </body>
