--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="./index.html">
-            <img src="./images/Group 28.svg" alt="logo">
+            <img src="./images/Group 28.svg" alt="Group">
         </a>
     </header>
 </body>
