--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
     <header>
         <a href="./index.html">
-            <img src="./images/Group 28.svg" alt="Group">
+            <img src="./images/Group 28.svg" alt="Group">Байкальский отдых Турагентство
         </a>
+        <ul>
+            <li><a href="tel:89243541540">8-924-3-541-540</a></li>
+            <li><a href="mailto:baikalholiday@mail.ru">baikalholiday@mail.ru</a></li>
+        </ul>
     </header>
 </body>
 </html>
