--- a/index.html
+++ b/index.html
@@ -15,6 +15,43 @@
             <li><a href="tel:89243541540">8-924-3-541-540</a></li>
             <li><a href="mailto:baikalholiday@mail.ru">baikalholiday@mail.ru</a></li>
         </ul>
+        <button type="button">Обратный звонок</button>
+        <nav>
+            <ul>
+                <li><a href="#">Бронирование</a></li>
+                <li><a href="#">Экскурсии</a></li>
+                <li><a href="#">Туры на Байкал</a></li>
+                <li><a href="#">О Байкале</a></li>
+                <li><a href="#">О нас</a></li>
+            </ul>
+        </nav>
     </header>
+    <main>
+        <section>
+            <h1>Путешествия
+                 по Байкалу</h1>
+            <p>Туры по самому красивому месту России.
+            Поехали с нами за новыми впечатлениями!</p>
+            <a href="#">подобрать тур</a>
+            <a href="#"></a>
+        </section>
+        <section>
+            <h2>подобрать тур</h2>
+            <ul>
+                <li><a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="" width="256px" height="152px"><h3>Турбазы на Байкале</h3></a></li>
+                <li><a href="#"><img src="./images/Экскурсии-и-туры.jpg" alt="" width="256px" height="152px"><h3>Экскурсии и туры</h3></a></li>
+                <li><a href="#"><img src="./images/Охота-и-рыбалка.jpg" alt="" width="256px" height="152px"><h3>Охота и рыбалка</h3></a></li>
+                <li><a href="#"><img src="./images/Экстрим-туры.jpg" alt="" width="256px" height="152px"><h3>Экстрим туры</h3></a></li>
+                <li><a href="#"><img src="./images/Теплоходы,-яхты.jpg" alt="" width="256px" height="152px"><h3>Теплоходы, яхты</h3></a></li>
+                <li><a href="#"><img src="./images/Красоты-Байкала.jpg" alt="" width="256px" height="152px"><h3>Красоты Байкала</h3></a></li>
+                <li><a href="#"><img src="./images/Гостиницы-в-Улан-Удэ.jpg" alt="" width="256px" height="152px"><h3>Гостиницы в Улан-Удэ</h3></a></li>
+                <li><a href="#"><img src="./images/Транспорт.jpg" alt="" width="256px" height="152px"><h3>Транспорт</h3></a></li>
+                <li><a href="#"><img src="./images/Деловой-туризм.jpg" alt="" width="256px" height="152px"><h3>Деловой туризм</h3></a></li>
+                <li><a href="#"><img src="./images/Круизы-по-Байкалу.jpg" alt="" width="256px" height="152px"><h3>Круизы по Байкалу</h3></a></li>
+                <li><a href="#"><img src="./images/Зимние-туры.jpg" alt="" width="256px" height="152px"><h3>Зимние туры</h3></a></li>
+                <li><a href="#"><img src="./images/О-Байкале.jpg" alt="" width="256px" height="152px"><h3>Карта Байкала</h3></a></li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
