--- a/index.html
+++ b/index.html
@@ -38,18 +38,47 @@
         <section>
             <h2>подобрать тур</h2>
             <ul>
-                <li><a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="" width="256px" height="152px"><h3>Турбазы на Байкале</h3></a></li>
-                <li><a href="#"><img src="./images/Экскурсии-и-туры.jpg" alt="" width="256px" height="152px"><h3>Экскурсии и туры</h3></a></li>
-                <li><a href="#"><img src="./images/Охота-и-рыбалка.jpg" alt="" width="256px" height="152px"><h3>Охота и рыбалка</h3></a></li>
-                <li><a href="#"><img src="./images/Экстрим-туры.jpg" alt="" width="256px" height="152px"><h3>Экстрим туры</h3></a></li>
-                <li><a href="#"><img src="./images/Теплоходы,-яхты.jpg" alt="" width="256px" height="152px"><h3>Теплоходы, яхты</h3></a></li>
-                <li><a href="#"><img src="./images/Красоты-Байкала.jpg" alt="" width="256px" height="152px"><h3>Красоты Байкала</h3></a></li>
-                <li><a href="#"><img src="./images/Гостиницы-в-Улан-Удэ.jpg" alt="" width="256px" height="152px"><h3>Гостиницы в Улан-Удэ</h3></a></li>
-                <li><a href="#"><img src="./images/Транспорт.jpg" alt="" width="256px" height="152px"><h3>Транспорт</h3></a></li>
-                <li><a href="#"><img src="./images/Деловой-туризм.jpg" alt="" width="256px" height="152px"><h3>Деловой туризм</h3></a></li>
-                <li><a href="#"><img src="./images/Круизы-по-Байкалу.jpg" alt="" width="256px" height="152px"><h3>Круизы по Байкалу</h3></a></li>
-                <li><a href="#"><img src="./images/Зимние-туры.jpg" alt="" width="256px" height="152px"><h3>Зимние туры</h3></a></li>
-                <li><a href="#"><img src="./images/О-Байкале.jpg" alt="" width="256px" height="152px"><h3>Карта Байкала</h3></a></li>
+                <li><a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="фото категории" width="256px" height="152px"><h3>Турбазы на Байкале</h3></a></li>
+                <li><a href="#"><img src="./images/Экскурсии-и-туры.jpg" alt="фото категории" width="256px" height="152px"><h3>Экскурсии и туры</h3></a></li>
+                <li><a href="#"><img src="./images/Охота-и-рыбалка.jpg" alt="фото категории" width="256px" height="152px"><h3>Охота и рыбалка</h3></a></li>
+                <li><a href="#"><img src="./images/Экстрим-туры.jpg" alt="фото категории" width="256px" height="152px"><h3>Экстрим туры</h3></a></li>
+                <li><a href="#"><img src="./images/Теплоходы,-яхты.jpg" alt="фото категории" width="256px" height="152px"><h3>Теплоходы, яхты</h3></a></li>
+                <li><a href="#"><img src="./images/Красоты-Байкала.jpg" alt="фото категории" width="256px" height="152px"><h3>Красоты Байкала</h3></a></li>
+                <li><a href="#"><img src="./images/Гостиницы-в-Улан-Удэ.jpg" alt="фото категории" width="256px" height="152px"><h3>Гостиницы в Улан-Удэ</h3></a></li>
+                <li><a href="#"><img src="./images/Транспорт.jpg" alt="фото категории" width="256px" height="152px"><h3>Транспорт</h3></a></li>
+                <li><a href="#"><img src="./images/Деловой-туризм.jpg" alt="фото категории" width="256px" height="152px"><h3>Деловой туризм</h3></a></li>
+                <li><a href="#"><img src="./images/Круизы-по-Байкалу.jpg" alt="фото категории" width="256px" height="152px"><h3>Круизы по Байкалу</h3></a></li>
+                <li><a href="#"><img src="./images/Зимние-туры.jpg" alt="фото категории" width="256px" height="152px"><h3>Зимние туры</h3></a></li>
+                <li><a href="#"><img src="./images/О-Байкале.jpg" alt="фото категории" width="256px" height="152px"><h3>Карта Байкала</h3></a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Основные направления деятельности</h2>
+            <ul>
+                <li>
+                    <p>Групповые и индивидуальные туры по Байкалу для российских и иностранных туристов</p>
+                </li>
+                <li>
+                    <p>Экскурсии по городу Улан-Удэ, Республике Бурятия,городу Иркутск</p>
+                </li>
+                <li>
+                    <p>Услуги гидов-переводчиков на любом иностранном языке</p>
+                </li>
+                <li>
+                    <p>Круизы и прогулки по Байкалу на теплоходах и катерах</p>
+                </li>
+                <li>
+                    <p>Профессиональная организация охоты и рыбалки на Байкале</p>
+                </li>
+                <li>
+                    <p>Аренда автотранспорта для экскурсий и пассажирских перевозок</p>
+                </li>
+                <li>
+                    <p>Бронирование гостиниц в городе Улан-Удэ и на Байкале</p>
+                </li>
+                <li>
+                    <p>Организация индивидуальных туров и VIP-туров на Байкале</p>
+                </li>
             </ul>
         </section>
     </main>
