--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Популярные предложения</h2>
+            
+        </section>
     </main>
 </body>
 </html>
