--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
         <section>
             <h2>Популярные предложения</h2>
             <ul>
-                <li><a href="#"><img src="./images/images/Зимний  Чивыркуйский залив 1.jpg" alt="Чивыркуйский залив"><h3>Зимний однодневный тур на Чивыркуйский залив</h3><p>Cтоимость 4000 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Зимний  Ольхон 2.jpg" alt="Зимний  Ольхон"><h3>Зимний однодневный тур на остров Ольхон</h3><p>Cтоимость 5000 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Иволгинский дацан.jpg" alt="Иволгинский дацан"><h3>Экскурсия в Иволгинский дацан</h3><p>Продолжительность 4 часа Cтоимость от 500 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Улан-Удэ 1.jpg" alt="Улан-Удэ"><h3>Обзорная экскурсия по Улан-Удэ</h3><p>Продолжительность 3 часа Cтоимость от 500 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Эко-отель  1.jpg" alt="Эко-отель"><h3>Эко-отель «Байкальское шале», с. Максимиха</h3><p>Стоимость от 6500 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Летний Чивыркуйский.jpg" alt="Летний Чивыркуйский"><h3>Летний однодневный тур в Чивыркуйский залив</h3><p>Cтоимость 4000 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Отель «Белая Карета», с 1.jpg" alt="Белая Карета"><h3>Отель «Белая Карета», с. Горячинск</h3><p>Cтоимость от 3200 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/«Байкальская Гавань» 1.jpg" alt="Байкальская Гавань"><h3>Однодневная поездка на Байкал «Байкальская Гавань»</h3><p>Стоимость от 1000 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/«Сагаан-Морин», с 1.jpg" alt="Сагаан-Морин"><h3>Парк-отель «Сагаан-Морин», с. Сухая</h3><p>Стоимость от 3500 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/Летний  Ольхон 2.jpg" alt="Летний  Ольхон"><h3>Летний однодневный тур на остров Ольхон</h3><p>Стоимость 8500 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/«Байкальская Ривьера».jpg" alt="Байкальская Ривьера"><h3>Зимний тур «Чивыркуйская сказка»</h3><p>Стоимость 2000 руб.</p></a></li>
-                <li><a href="#"><img src="./images/images/«Чивыркуйская сказка».jpg" alt="Чивыркуйская сказка"><h3>Парк-отель «Байкальская Ривьера», с. Гремячинск</h3><p>Cтоимость от 3700 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Зимний  Чивыркуйский залив 1.jpg" alt="Чивыркуйский залив" width="256" height="256"><h3>Зимний однодневный тур на Чивыркуйский залив</h3><p>Cтоимость 4000 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Зимний  Ольхон 2.jpg" alt="Зимний  Ольхон" width="256" height="256"><h3>Зимний однодневный тур на остров Ольхон</h3><p>Cтоимость 5000 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Иволгинский дацан.jpg" alt="Иволгинский дацан" width="544" height="544"><h3>Экскурсия в Иволгинский дацан</h3><p>Продолжительность 4 часа Cтоимость от 500 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Улан-Удэ 1.jpg" alt="Улан-Удэ" width="256" height="256"><h3>Обзорная экскурсия по Улан-Удэ</h3><p>Продолжительность 3 часа Cтоимость от 500 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Эко-отель  1.jpg" alt="Эко-отель" width="256" height="256"><h3>Эко-отель «Байкальское шале», с. Максимиха</h3><p>Стоимость от 6500 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Летний Чивыркуйский.jpg" alt="Летний Чивыркуйский" width="256" height="256"><h3>Летний однодневный тур в Чивыркуйский залив</h3><p>Cтоимость 4000 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Отель «Белая Карета», с 1.jpg" alt="Белая Карета" width="256" height="256"><h3>Отель «Белая Карета», с. Горячинск</h3><p>Cтоимость от 3200 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/«Байкальская Гавань» 1.jpg" alt="Байкальская Гавань" width="256" height="256"><h3>Однодневная поездка на Байкал «Байкальская Гавань»</h3><p>Стоимость от 1000 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/«Сагаан-Морин», с 1.jpg" alt="Сагаан-Морин" width="256" height="256"><h3>Парк-отель «Сагаан-Морин», с. Сухая</h3><p>Стоимость от 3500 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/Летний  Ольхон 2.jpg" alt="Летний  Ольхон" width="256" height="256"><h3>Летний однодневный тур на остров Ольхон</h3><p>Стоимость 8500 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/«Байкальская Ривьера».jpg" alt="Байкальская Ривьера" width="256" height="256"><h3>Зимний тур «Чивыркуйская сказка»</h3><p>Стоимость 2000 руб.</p></a></li>
+                <li><a href="#"><img src="./images/images/«Чивыркуйская сказка».jpg" alt="Чивыркуйская сказка" width="256" height="256"><h3>Парк-отель «Байкальская Ривьера», с. Гремячинск</h3><p>Cтоимость от 3700 руб.</p></a></li>
             </ul>
         </section>
     </main>
