--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
                 <li><a href="#"><img src="./images/images/«Байкальская Ривьера».jpg" alt="Байкальская Ривьера" width="256" height="256"><h3>Зимний тур «Чивыркуйская сказка»</h3><p>Стоимость 2000 руб.</p></a></li>
                 <li><a href="#"><img src="./images/images/«Чивыркуйская сказка».jpg" alt="Чивыркуйская сказка" width="256" height="256"><h3>Парк-отель «Байкальская Ривьера», с. Гремячинск</h3><p>Cтоимость от 3700 руб.</p></a></li>
             </ul>
+            <a href="">Показать все предложения</a>
+        </section>
+        <section></section>
+        <section>
+            <h2>Карта Байкала</h2>
+            <img src="./images/images/карта баикал.jpg" alt="карта баикал" width="1120" height="609">
+        </section>
+        <section>
+            <h2>О Байкале</h2>
+            <p>Озеро Байкал – глубочайшее и древнейшее озеро планеты. Древние жители Прибайкалья называли его Священным морем и
+            считали, что в Байкале нет дна, обожествляли и наделяли его мистическими свойствами. Именно здесь пронзительные чувства
+            и скрытые способности человека находят выплеск.
+            </p>
+            <p>Познается что-то новое не только в природе, но и в самом себе. Многие посетившие Байкал люди утверждают, что озеро
+            оказало большое влияние на их дальнейшую жизнь.</p>
         </section>
     </main>
 </body>
