--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
             </ul>
             <a href="">Показать все предложения</a>
         </section>
-        <section></section>
         <section>
             <h2>Карта Байкала</h2>
             <img src="./images/images/карта баикал.jpg" alt="карта баикал" width="1120" height="609">
@@ -112,6 +111,63 @@
             </p>
             <p>Познается что-то новое не только в природе, но и в самом себе. Многие посетившие Байкал люди утверждают, что озеро
             оказало большое влияние на их дальнейшую жизнь.</p>
+            <button type="button">Читать подробней</button>
+        </section>
+        <section>
+            <h2>Фотогалерея</h2>
+            <a href="#">Перейти в раздел</a>
+            <ul>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+            </ul>
+            <ul>
+                <li><img src="./images/images/images/Фотогалерея-1.jpg" alt="Фотогалерея-1" width="352"></li>
+                <li><img src="./images/images/images/Фотогалерея2.jpg" alt="Фотогалерея2" width="352"></li>
+                <li><img src="./images/images/images/Фотогалерея3.jpg" alt="Фотогалерея3" width="352"></li>
+                <li><img src="./images/images/images/Фотогалерея4.jpg" alt="Фотогалерея4" width="352"></li>
+                <li><img src="./images/images/images/Фотогалерея5.jpg" alt="Фотогалерея5" width="352"></li>
+                <li><img src="./images/images/images/Фотогалерея6.jpg" alt="Фотогалерея6" width="352"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Байкальский отдых</h2>
+            <p>Байкальский отдых с нами – это легко!</p>
+            <img src="./images/images/images/пара чел.jpg" alt="пара чел">
+            <img src="./images/images/images/морекамен.jpg" alt="морекамен">
+            <p>На сайте туристического агентства «Байкальский отдых» вы найдете всю необходимую информацию о туристических базах отдыха
+            на озере Байкал. Любите ли вы отличный сервис и европейский комфорт или предпочитаете прочувствовать все трудности
+            дикого туризма и окунуться в атмосферу байкальской природы, здесь вы сможете найти турбазу по своему вкусу.
+            </p>
+            <p>Туристические базы отдыха на Байкале предоставляют разнообразные условия размещения, они отличаются по перечню
+            предлагаемых услуг и уровню комфорта.</p>
+            <p>Есть большие турбазы с полностью организованным питанием и вечерними дискотеками, есть также небольшие малолюдные базы
+            всего с несколькими коттеджами. Можно арендовать отдельный гостевой домик с кухней и готовить пищу самостоятельно.</p>
+            <p>Среди этого многообразия обязательно найдется подходящая, именно вам, база отдыха. Тем не менее, Байкал, до сих пор,
+            обладает всеми оттенками дикого экотуризма, чем и привлекает, уставших от городской суеты, туристов.</p>
+            <p>Если вы предпочитаете зимний байкальский отдых, к Вашим услугам круглогодичные отапливаемые турбазы и различные зимние
+            развлечения. Байкал зимой поражает кристальной чистотой и прозрачностью льда.</p>
+            <p>Туристы очень любят отмечать Новогодние праздники и Рождество на турбазах Байкала, так как новый год на Байкале
+            отличается особым волшебством. Развлекательную новогоднюю программу готовит почти каждая турбаза.</p>
+        </section>
+        <section>
+            <h2>о нас</h2>
+            <ul>
+                <li>
+                    <p>7 лет успешной работы</p>
+                </li>
+                <li>
+                    <p>250+ отелей на Байкале</p> 
+                </li>
+                <li>
+                    <p>100+ различных туров</p>
+                </li>
+                <li>
+                    <p>32 000 кв. км – площадь на которой мы организовываем путешествия</p>
+                </li>
+                <li>
+                    <p>50 000 довольных туристов от 3 до 85 лет</p>
+                </li>
+            </ul>
         </section>
     </main>
 </body>
