--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Байкальский отдых</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="./index.html">
             <img src="./images/Group 28.svg" alt="Group">Байкальский отдых Турагентство
         </a>
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h1>Путешествия
                  по Байкалу</h1>
             <p>Туры по самому красивому месту России.
@@ -35,7 +35,7 @@
             <a href="#">подобрать тур</a>
             <a href="#"></a>
         </section>
-        <section>
+        <section class="categories">
             <h2>подобрать тур</h2>
             <ul>
                 <li><a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="фото категории" width="256px" height="152px"><h3>Турбазы на Байкале</h3></a></li>
@@ -52,7 +52,7 @@
                 <li><a href="#"><img src="./images/О-Байкале.jpg" alt="фото категории" width="256px" height="152px"><h3>Карта Байкала</h3></a></li>
             </ul>
         </section>
-        <section>
+        <section class="directions">
             <h2>Основные направления деятельности</h2>
             <ul>
                 <li>
@@ -81,7 +81,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="suggestions">
             <h2>Популярные предложения</h2>
             <ul>
                 <li><a href="#"><img src="./images/images/Зимний  Чивыркуйский залив 1.jpg" alt="Чивыркуйский залив" width="256" height="256"><h3>Зимний однодневный тур на Чивыркуйский залив</h3><p>Cтоимость 4000 руб.</p></a></li>
@@ -99,11 +99,11 @@
             </ul>
             <a href="">Показать все предложения</a>
         </section>
-        <section>
+        <section class="map">
             <h2>Карта Байкала</h2>
             <img src="./images/images/карта баикал.jpg" alt="карта баикал" width="1120" height="609">
         </section>
-        <section>
+        <section class="about">
             <h2>О Байкале</h2>
             <p>Озеро Байкал – глубочайшее и древнейшее озеро планеты. Древние жители Прибайкалья называли его Священным морем и
             считали, что в Байкале нет дна, обожествляли и наделяли его мистическими свойствами. Именно здесь пронзительные чувства
@@ -113,7 +113,7 @@
             оказало большое влияние на их дальнейшую жизнь.</p>
             <button type="button">Читать подробней</button>
         </section>
-        <section>
+        <section class="gallery">
             <h2>Фотогалерея</h2>
             <a href="#">Перейти в раздел</a>
             <ul>
@@ -129,7 +129,7 @@
                 <li><img src="./images/images/images/Фотогалерея6.jpg" alt="Фотогалерея6" width="352"></li>
             </ul>
         </section>
-        <section>
+        <section class="invitation">
             <h2>Байкальский отдых</h2>
             <p>Байкальский отдых с нами – это легко!</p>
             <img src="./images/images/images/пара чел.jpg" alt="пара чел">
@@ -149,7 +149,7 @@
             <p>Туристы очень любят отмечать Новогодние праздники и Рождество на турбазах Байкала, так как новый год на Байкале
             отличается особым волшебством. Развлекательную новогоднюю программу готовит почти каждая турбаза.</p>
         </section>
-        <section>
+        <section class="features">
             <h2>о нас</h2>
             <ul>
                 <li>
@@ -169,6 +169,12 @@
                 </li>
             </ul>
         </section>
+        <section class="form">
+            <h2>Забронируйте отдых на Байкале</h2>
+        </section>
     </main>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
