--- a/index.html
+++ b/index.html
@@ -175,7 +175,68 @@
         </section>
     </main>
     <footer class="footer">
-
+       <div>
+           <h3>Бронирование</h3>
+         <ul>
+             <li><a href="">Отели и базы отдыха</a></li>
+             <li><a href="">Теплоходы и катера</a></li>
+             <li><a href="">Транспортные услуги</a></li>
+         </ul>
+       </div>
+       <div>
+           <h3>Экскурсии</h3>
+           <ul>
+               <li><a href="">Экскурсии и туры</a></li>
+               <li><a href="">Экстрим туры</a></li>
+           </ul>
+       </div>
+    <div>
+        <h3>Туры на Байкал</h3>
+     <ul>
+        <li><a href="">Туры Зима-Весна</a></li>
+        <li><a href="">Туры Лето-Осень</a></li>
+        <li><a href="">Туры охоты и рыбалки</a></li>
+     </ul>
+    </div>
+    <div>
+        <h3>О Байкале</h3>
+        <ul>
+            <li><a href="">Карта Байкала</a></li>
+            <li><a href="">Достопримечательности</a></li>
+            <li><a href="">Полезная информация</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3>О нас</h3>
+        <ul>
+            <li><a href="">Контакты</a></li>
+            <li><a href="">Агентствам</a></li>
+        </ul>
+    </div>
+    <div>
+        <p>Турагентство «Байкальский отдых»</p>
+        <small>&copy; 2021. Все права защищены</small>
+    </div>
+    <div>
+        <address>
+            <p>Заказ туров и бронирование:</p>
+            <ul>
+                <li>
+                    <a href="tel:+89243541540">тел. 8-924-3-541-540</a>
+                </li>
+                <li>
+                    <a href="mailto:baikalholiday@mail.ru">e-mail: baikalholiday@mail.ru</a>
+                </li>
+            </ul>
+            <p>Адрес:</p>
+            <p>г. Улан-Удэ, ул.Гражданская, 20,
+            отель «Рестон», 1 этаж</p>
+        </address>
+        <div>
+           <a href="">Политика конфиденциальности</a>
+           <a href="">Дизайн<img src="./images/Vector.svg" alt="logo"></a>
+            </div>
+    </div>
     </footer>
 </body>
 </html>
