--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Байкальский отдых</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -37,21 +44,36 @@
             <a href="#"></a>
         </section>
         <section class="categories">
-            <h2>подобрать тур</h2>
-            <ul>
-                <li><a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="фото категории" width="256px" height="152px"><h3>Турбазы на Байкале</h3></a></li>
-                <li><a href="#"><img src="./images/Экскурсии-и-туры.jpg" alt="фото категории" width="256px" height="152px"><h3>Экскурсии и туры</h3></a></li>
-                <li><a href="#"><img src="./images/Охота-и-рыбалка.jpg" alt="фото категории" width="256px" height="152px"><h3>Охота и рыбалка</h3></a></li>
-                <li><a href="#"><img src="./images/Экстрим-туры.jpg" alt="фото категории" width="256px" height="152px"><h3>Экстрим туры</h3></a></li>
-                <li><a href="#"><img src="./images/Теплоходы,-яхты.jpg" alt="фото категории" width="256px" height="152px"><h3>Теплоходы, яхты</h3></a></li>
-                <li><a href="#"><img src="./images/Красоты-Байкала.jpg" alt="фото категории" width="256px" height="152px"><h3>Красоты Байкала</h3></a></li>
-                <li><a href="#"><img src="./images/Гостиницы-в-Улан-Удэ.jpg" alt="фото категории" width="256px" height="152px"><h3>Гостиницы в Улан-Удэ</h3></a></li>
-                <li><a href="#"><img src="./images/Транспорт.jpg" alt="фото категории" width="256px" height="152px"><h3>Транспорт</h3></a></li>
-                <li><a href="#"><img src="./images/Деловой-туризм.jpg" alt="фото категории" width="256px" height="152px"><h3>Деловой туризм</h3></a></li>
-                <li><a href="#"><img src="./images/Круизы-по-Байкалу.jpg" alt="фото категории" width="256px" height="152px"><h3>Круизы по Байкалу</h3></a></li>
-                <li><a href="#"><img src="./images/Зимние-туры.jpg" alt="фото категории" width="256px" height="152px"><h3>Зимние туры</h3></a></li>
-                <li><a href="#"><img src="./images/О-Байкале.jpg" alt="фото категории" width="256px" height="152px"><h3>Карта Байкала</h3></a></li>
+            <div class="conteiner">
+            <h2 class="categories-title visually-hidden">подобрать тур</h2>
+            
+            <ul class="categories-card-set">
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Турбазы на Байкале</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Экскурсии-и-туры.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Экскурсии и туры</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Охота-и-рыбалка.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Охота и рыбалка</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Экстрим-туры.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Экстрим туры</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Теплоходы,-яхты.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Теплоходы, яхты</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Красоты-Байкала.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Красоты Байкала</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Гостиницы-в-Улан-Удэ.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Гостиницы в Улан-Удэ</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Транспорт.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Транспорт</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Деловой-туризм.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Деловой туризм</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Круизы-по-Байкалу.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Круизы по Байкалу</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/Зимние-туры.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Зимние туры</h3></div></a></li>
+                <li class="categories-item">
+                    <a href="#"><img src="./images/О-Байкале.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Карта Байкала</h3></div></a></li>
             </ul>
+            </div>
         </section>
         <section class="directions">
             <h2>Основные направления деятельности</h2>
