--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         <section class="categories">
             <div class="conteiner">
             <h2 class="categories-title visually-hidden">подобрать тур</h2>
-            
             <ul class="categories-card-set">
                 <li class="categories-item">
                     <a href="#"><img src="./images/Турбазы-на-Байкале.jpg" alt="фото категории" width="256px" height="152px"><div class="categories-subtitle"><h3>Турбазы на Байкале</h3></div></a></li>
@@ -197,49 +196,52 @@
         </section>
     </main>
     <footer class="footer">
-       <div>
-           <h3>Бронирование</h3>
+    <div class="conteiner">
+       <div class="footer-top">
+           <div class="footer-block">
+           <h3 class="footer-list">Бронирование</h3>
          <ul>
-             <li><a href="">Отели и базы отдыха</a></li>
-             <li><a href="">Теплоходы и катера</a></li>
-             <li><a href="">Транспортные услуги</a></li>
+             <li class="footer-item"><a href="">Отели и базы отдыха</a></li>
+             <li class="footer-item"><a href="">Теплоходы и катера</a></li>
+             <li class="footer-item"><a href="">Транспортные услуги</a></li>
          </ul>
        </div>
-       <div>
-           <h3>Экскурсии</h3>
+       <div class="footer-block">
+           <h3 class="footer-list">Экскурсии</h3>
            <ul>
-               <li><a href="">Экскурсии и туры</a></li>
-               <li><a href="">Экстрим туры</a></li>
+               <li class="footer-item"><a href="">Экскурсии и туры</a></li>
+               <li class="footer-item"><a href="">Экстрим туры</a></li>
            </ul>
        </div>
-    <div>
-        <h3>Туры на Байкал</h3>
+    <div class="footer-block">
+        <h3 class="footer-list">Туры на Байкал</h3>
      <ul>
-        <li><a href="">Туры Зима-Весна</a></li>
-        <li><a href="">Туры Лето-Осень</a></li>
-        <li><a href="">Туры охоты и рыбалки</a></li>
+        <li class="footer-item"><a href="">Туры Зима-Весна</a></li>
+        <li class="footer-item"><a href="">Туры Лето-Осень</a></li>
+        <li class="footer-item"><a href="">Туры охоты и рыбалки</a></li>
      </ul>
     </div>
-    <div>
-        <h3>О Байкале</h3>
+    <div class="footer-block">
+        <h3 class="footer-list">О Байкале</h3>
         <ul>
-            <li><a href="">Карта Байкала</a></li>
-            <li><a href="">Достопримечательности</a></li>
-            <li><a href="">Полезная информация</a></li>
+            <li class="footer-item"><a href="">Карта Байкала</a></li>
+            <li class="footer-item"><a href="">Достопримечательности</a></li>
+            <li class="footer-item"><a href="">Полезная информация</a></li>
         </ul>
     </div>
-    <div>
-        <h3>О нас</h3>
+    <div class="footer-block">
+        <h3 class="footer-list">О нас</h3>
         <ul>
-            <li><a href="">Контакты</a></li>
-            <li><a href="">Агентствам</a></li>
+            <li class="footer-item"><a href="">Контакты</a></li>
+            <li class="footer-item"><a href="">Агентствам</a></li>
         </ul>
     </div>
-    <div>
+ </div>
+
+    <div class="footer-bottom">
         <p>Турагентство «Байкальский отдых»</p>
         <small>&copy; 2021. Все права защищены</small>
-    </div>
-    <div>
+        <div>
         <address>
             <p>Заказ туров и бронирование:</p>
             <ul>
@@ -254,10 +256,12 @@
             <p>г. Улан-Удэ, ул.Гражданская, 20,
             отель «Рестон», 1 этаж</p>
         </address>
+        </div>
         <div>
            <a href="">Политика конфиденциальности</a>
            <a href="">Дизайн<img src="./images/Vector.svg" alt="logo"></a>
-            </div>
+        </div>
+    </div>
     </div>
     </footer>
 </body>
