--- a/index.html
+++ b/index.html
@@ -21,27 +21,32 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <!--🤞Header Logo✌️-->
     <header class="header">
-      <a href="./index.html">
-        <img src="./images/Group 28.svg" alt="Group" />Байкальский отдых
-        Турагентство
-      </a>
-      <ul>
-        <li><a href="tel:89243541540">8-924-3-541-540</a></li>
-        <li>
-          <a href="mailto:baikalholiday@mail.ru">baikalholiday@mail.ru</a>
-        </li>
-      </ul>
-      <button type="button">Обратный звонок</button>
-      <nav>
+      <div class="conteiner">
+        <div class="">
+          <a href="./index.html" class="logo">
+            <img src="./images/Group28.svg" alt="Group" />
+            Байкальский отдых Турагентство
+          </a>
+        </div>
         <ul>
-          <li><a href="#">Бронирование</a></li>
-          <li><a href="#">Экскурсии</a></li>
-          <li><a href="#">Туры на Байкал</a></li>
-          <li><a href="#">О Байкале</a></li>
-          <li><a href="#">О нас</a></li>
+          <li><a href="tel:89243541540">8-924-3-541-540</a></li>
+          <li>
+            <a href="mailto:baikalholiday@mail.ru">baikalholiday@mail.ru</a>
+          </li>
         </ul>
-      </nav>
+        <button type="button">Обратный звонок</button>
+        <nav>
+          <ul>
+            <li><a href="#">Бронирование</a></li>
+            <li><a href="#">Экскурсии</a></li>
+            <li><a href="#">Туры на Байкал</a></li>
+            <li><a href="#">О Байкале</a></li>
+            <li><a href="#">О нас</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="hero">
