--- a/index.html
+++ b/index.html
@@ -37,13 +37,23 @@
           </li>
         </ul>
         <button type="button">Обратный звонок</button>
-        <nav>
-          <ul>
-            <li><a href="#">Бронирование</a></li>
-            <li><a href="#">Экскурсии</a></li>
-            <li><a href="#">Туры на Байкал</a></li>
-            <li><a href="#">О Байкале</a></li>
-            <li><a href="#">О нас</a></li>
+        <nav class="page-nav">
+          <ul class="page-nav__list">
+            <li class="page-nav__item">
+              <a href="#" class="page-nav__link">Бронирование</a>
+            </li>
+            <li class="page-nav__item">
+              <a href="#" class="page-nav__link">Экскурсии</a>
+            </li>
+            <li class="page-nav__item">
+              <a href="#" class="page-nav__link">Туры на Байкал</a>
+            </li>
+            <li class="page-nav__item">
+              <a href="#" class="page-nav__link">О Байкале</a>
+            </li>
+            <li class="page-nav__item">
+              <a href="#" class="page-nav__link">О нас</a>
+            </li>
           </ul>
         </nav>
       </div>
