--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
   </head>
   <body>
     <!--🤞Header Logo✌️-->
-    <header class="header">
+    <header class="page-header">
       <div class="conteiner">
-        <div class="">
-          <a href="./index.html" class="logo">
-            <img src="./images/Group28.svg" alt="Group" />
-            Байкальский отдых Турагентство
-          </a>
-        </div>
+        <a href="./index.html" class="logo">
+          <img src="./images/Group28.svg" alt="Group" />
+          <span class="logo__text">Байкальский отдых Турагентство</span>
+        </a>
         <ul>
           <li><a href="tel:89243541540">8-924-3-541-540</a></li>
           <li>
@@ -61,7 +59,7 @@
     <main>
       <section class="hero">
         <div class="conteiner">
-          <h1>Путешествия по Байкалу</h1>
+          <h1 class="hero__title">Путешествия по Байкалу</h1>
           <p>
             Туры по самому красивому месту России. Поехали с нами за новыми
             впечатлениями!
